# DASexplorer

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
dasexplorer/: __init__.py  __main__.py  about.txt  version.py
dasexplorer/cfg/: config.json
dasexplorer/cfg/info/: add_new_reader.txt  list_of_readers.txt
dasexplorer/core/: analysis.py  annotation_export.py  annotations.py  config.py  data_model.py  io_formats.py  readers.py  rgb.py
dasexplorer/gui/: analysis_dialogs.py  annotation_widget.py  batch_annotations_dialog.py  batch_conversion_dialog.py  batch_data_dialog.py  config_profile_dialog.py  main_window.py  tab_bar.py  theme.py  waterfall.py
dasexplorer/tools/apl/: hdas_reader.cp311-win_amd64.pyd  utils_2_5.py  utils_3_5.py
