[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasexplorer"
dynamic = ["version"]
description = "Visualisation, analysis and annotation tool for Distributed Acoustic Sensing (DAS) data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sergio Morell-Monzó",  email = "sermomon@upv.es" },
]
keywords = ["DAS", "distributed acoustic sensing", "fiber optic sensing", "underwater acoustics", "annotation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15",
    "pyqtgraph>=0.13",
    "numpy>=1.22",
    "scipy>=1.9",
    "matplotlib>=3.5",
    "h5py>=3.7",
    "das4whales>=0.1",
    "Pillow>=9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.urls]
Homepage = "https://github.com/sermomon/DASexplorer"
Repository = "https://github.com/sermomon/DASexplorer"
"Bug Tracker" = "https://github.com/sermomon/DASexplorer/issues"

[project.gui-scripts]
dasexplorer = "dasexplorer.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "dasexplorer.version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["dasexplorer*"]

[tool.setuptools.package-data]
dasexplorer = ["cfg/*.json", "icons/*", "about.txt", "tools/apl/readme.txt"]
